# project-euler

./: .gitignore  Main.hs  README.org  minimalIssue.hs  oldMain.hs  p001.el  p001.hs  p002.hs  p003.hs  p004.hs  p005.hs  p006.hs  p007.hs  p008.hs  p010.hs  p011.hs  p012.hs  p013.hs  p014.hs  p016.hs  p017.hs  p018.hs  p019.hs  p020.hs  p023.hs  p024.hs  p025.hs  p026.hs  p028.hs  p030.hs  p031.hs  p032.hs  p033.hs  p034.hs  p035.hs  p037.hs  p038.hs  p039.hs  p040.hs  p041.hs  (+85 more)
bash/: p001.sh
data/: ._p022_names.txt  ._p042_words.txt  ._p054_poker.txt  ._p059_cipher.txt  ._p067_triangle.txt  ._p079_keylog.txt  ._p081_matrix.txt  ._p099_base_exp.txt  ._p102_triangles.txt
elisp/: p001.el  p002.el  p003.el  p059.el  primes.el
haskell/: AAA-cleaning.org  P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  P037.hs  P038.hs  P039.hs  (+59 more)
heuler/: Main.hs  heuler.cabal  stack.yaml
java/: P001.java  P002.java  P003.java  P004.java  P005.java  P006.java  P007.java  P008.java  P009.java  P010.java
latex/: p085.tex
python/: digits.py  euler.py  genprimes.py  p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.hs  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p026.py  p043.py  p061.py  p065.py  p073.py  p074.py  p081.py  p085.py  p089.py  p092.py  p102.py  p205.py  p206.py  p357.py  p387.py  p407.py  p493.py  p549.py  primes.py  (+3 more)
