name:                project-euler
version:             0.1.0.0
synopsis:            (none)
description:         (none)
license:             OtherLicense
license-file:        LICENSE
author:              Brady Trainor
maintainer:          brady@bradyt.com
-- copyright:           
category:            (none)
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable project-euler
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       QuickCheck
                     , base >=4.8 && <4.9
                     , containers >= 0.5.6.2
                     , parsec >= 3.1.11
                     , parsers >= 0.12.3
                     -- , primes >= 0.2.1.0
                     , Numbers >= 0.2.1
                     , arithmoi >= 0.4.2.0
                     , hstats >= 0.3
                     , average >= 0.6.1
                     , csv >= 0.1.2
                     , array >= 0.5.1.0
  default-language:    Haskell2010
  ghc-options:       -fno-warn-type-defaults
                     -- , -Wall
                     

source-repository head
  type: git
  location: https://bitbucket.org:bradyt/haskell-project-euler/