name:                project-euler
version:             0.1.0.0
synopsis:            (none)
description:         (none)
license:             OtherLicense
license-file:        LICENSE
author:              Brady Trainor
maintainer:          brady@bradyt.com
category:            (none)
build-type:          Simple
cabal-version:       >=1.10

-- library: 
--   build-depends:       QuickCheck
--                      , base >=4.8 && <4.9
--                      , containers >= 0.5.6.2
--                      , mtl >= 2.2.1
--                      , split >= 0.2.3.1
--                      , text >= 1.2.2.1
--                      -- , parsec >= 3.1.11
--                      -- , parsers >= 0.12.3
--                      , transformers >= 0.4.2.0
--                      , vector >= 0.11.0.0
--                      -- , Numbers >= 0.2.1
--                      , arithmoi >= 0.4.2.0
--                      -- , hstats >= 0.3
--                      , average >= 0.6.1
--                      , csv >= 0.1.2
--                      , array >= 0.5.1.0
--                      , digits >= 0.2
--                      , combinat >= 0.2.8.1
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5

executable p051
  main-is:             p051.hs
  default-language:    Haskell2010
  build-depends:       QuickCheck
                     , base >=4.8 && <4.9
                     , combinat >= 0.2.8.1
                     , containers >= 0.5.6.2
                     , integer-gmp >= 1.0.0.0
                     , mtl >= 2.2.1
                     , split >= 0.2.3.1
                     -- , text >= 1.2.2.1
                     -- , parsec >= 3.1.11
                     -- , parsers >= 0.12.3
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0
                     -- , Numbers >= 0.2.1
                     , arithmoi >= 0.4.2.0
                     -- , hstats >= 0.3
                     -- , average >= 0.6.1
                     , csv >= 0.1.2
                     , array >= 0.5.1.0
                     , digits >= 0.2
                     -- , combinat >= 0.2.8.1
  ghc-options:       -fno-warn-type-defaults
                     -O2
                     -- -fprof-auto
                     -- -rtsopts=all
                     -- -prof
  ghc-prof-options:  -rtsopts=all
  build-depends:       base >= 4.7 && < 5

source-repository head
  type: git
  location: https://bitbucket.org:bradyt/project-euler/

